--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,7 @@ blog_button:
 # Navigation buttons in the front page.s
 nav:
     - {title: 所有文章, description: archive, url: '/archive'}
+    - {title: 分类, description: category, url: '/category'}
     - {title: 标签, description: tags, url: '/tags'}
     - {title: 关于我, description: about, url: '/about'}
     
